languages/montiarc-fe/src/test/resources/arc4/coco/invalid/NestedComponentWithTypeParameterLacksInstance.arc
package invalid;

component NestedComponentWithTypeParameterLacksInstance {
  component A {
    component Nested<T> {
      port in T tIn;
    }
  }
}